# claude_suite

./: .gitignore  CONTRIBUTING.md  ClaudeAgentManager.spec  ClaudeScheduler.spec  ClaudeSuite.spec  README.md  agent_manager.db-shm  agent_manager.db-wal  agent_manager.py  app.go  claude_scheduler.py  claude_suite.py  create_shortcut.py  create_suite_shortcut.py  fix_indent.py  go.mod  go.sum  main.go  main.py  make_icon.py  pyproject.toml  remove_proxy_env.bat  requirements.txt  run_scheduler.bat  wails.json
.github/workflows/: release.yml
backend/cli/: antigravity.go  claude.go  runner.go
backend/database/: agent_repo.go  db.go  memory_repo.go  task_repo.go
backend/models/: agent.go  config.go  memory.go  pipeline.go  task.go
backend/orchestrator/: dispatcher.go  fallback.go  orchestrator.go
backend/pipeline/: engine.go  plan_builder.go
backend/services/: context.go  exporter.go  git.go  scheduler.go  updater.go  webhook.go
backend/version/: version.go
frontend/: index.html  package-lock.json  package.json  package.json.md5  vite.config.ts
frontend/src/: App.svelte  app.css
modules/: __init__.py  agent_registry.py  antigravity_cli.py  claude_cli.py  context_manager.py  diff_viewer.py  document_parser.py  exporter.py  file_tree_explorer.py  memory_store.py  models.py  orchestrator.py  pipeline_engine.py  plan_builder.py  qa_interpreter.py  scheduler_tab.py  task_board.py  tray_widget.py  updater.py  version.py  webhook_server.py  workspace_config.py
tests/: test_pipeline_engine.py  test_task_board.py
ui/: __init__.py
ui/components/: __init__.py
(+21 files in other folders)
